--- a/views/index.html
+++ b/views/index.html
@@ -7,5 +7,13 @@
 	<body>
 		<script src='/js/jquery.js'></script>
 		<script src='/js/app.js'></script>
+        <ul id="messages"></ul>
+        <form action="">
+            <input id="m" autocomplete="off" /><button>Send</button>
+        </form>
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+            var socket = io();
+        </script>
 	</body>
 </html>
