add cancel button

--- a/views/test.html
+++ b/views/test.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Bella</title>
     <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta content='width=device-width, minimal-ui, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <link rel="stylesheet" href="/css/test.css">
 </head>
 
@@ -40,7 +40,8 @@
                     </select>
                     <h3 class="time-select tab-2"></h3> &nbsp;minutes
                 </div>
-                <button id="start" class="tab-1 alarm-tab set-button">set</button>
+                <button id="start" class="tab-1 alarm-tab start set-button">set</button>
+		<button id="cancel" class="tab-2 alarm-tab cancel set-button">cancel</button>
                 <ul class="events-list alarm-tab tab-2">Events
                 </ul>
                 <ul class="settings-list settings-tab">
