--- a/public/css/test.css
+++ b/public/css/test.css
@@ -187,7 +187,7 @@ display: inline-block;
     font-weight: 400;
     color: #FF4C6F;
     position: absolute;
-    top: 200px;
+    top: 250px;
     left: 10px;
     right: 20px;
     font-family: 'Satisfy';
@@ -238,9 +238,17 @@ display: inline-block;
     font-size: 24px;
     border-radius: 5px;
     border: none;
-    top: 50%;
     cursor: pointer;
 }
+
+.start {
+	top: 200px;
+}
+
+.cancel {
+	top: 175px;
+}
+
 
 .set-button:active,
 .set-button:hover,
